# Epitaxy

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/: CLI.md  MCP.md  ROADMAP.md  SCHEMA.md
docs/plans/: v0.2-systems-engineer-dashboard.md
src/epitaxy/: __init__.py
src/epitaxy/cli/: __init__.py  app.py
src/epitaxy/mcp_server/: __init__.py  tools.py
src/epitaxy/parser/: __init__.py  markdown.py  por.py  python.py  refs.py
src/epitaxy/serve/: __init__.py  app.py
src/epitaxy/store/: __init__.py  index.py  models.py
tests/: test_pillar_integration.py
tests/cli/: test_mcp_http.py  test_mcp_smoke.py  test_mcp_trace.py  test_serve_render.py  test_serve_smoke.py  test_sync_e2e.py  test_sync_parameters_e2e.py  test_sync_pr2_e2e.py
tests/fixtures/sample_repo/decisions/: 2026-02-rank-baseline.md  2026-04-rank-dim.md
tests/fixtures/sample_repo/docs/plans/: q2-launch.md
tests/fixtures/sample_repo/src/sample/: __init__.py  boundary.py  data.py  model.py
tests/parser/: test_markdown.py  test_por.py  test_python.py  test_python_parameters.py  test_refs.py
tests/store/: test_index.py  test_models_adr_plan.py
