[project]
name = "epitaxy"
version = "0.1.0a1"
description = "Process-of-Record (POR) explorer for ML codebases — built for AI agents to understand intent, not just structure."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Baron Wang", email = "90270661+schwinger42@users.noreply.github.com" }
]
requires-python = ">=3.10"
keywords = ["mcp", "codebase", "documentation", "ml-pipelines", "developer-tools", "intent", "por"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "typer>=0.12",
    "pydantic>=2.6",
    "mcp>=1.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
]

[project.scripts]
epi = "epitaxy.cli.app:app"

[project.urls]
Homepage = "https://github.com/schwinger42/Epitaxy"
Issues = "https://github.com/schwinger42/Epitaxy/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/epitaxy"]

# pyyaml (POR docstring frontmatter parsing) will be added alongside
# ADR / plan markdown parsing in PR2 — not used by PR1 tracer-bullet scope.
