[project]
name = "epitaxy"
version = "0.1.0"
description = "Process-of-Record (POR) explorer for ML codebases — built for AI agents to understand intent, not just structure."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Baron Wang", email = "90270661+schwinger42@users.noreply.github.com" }
]
requires-python = ">=3.10"
keywords = ["mcp", "codebase", "documentation", "ml-pipelines", "developer-tools", "intent", "por"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "typer>=0.12",
    "pydantic>=2.6",
    "mcp>=1.0",
    "pyyaml>=6.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
]

[project.scripts]
epi = "epitaxy.cli.app:app"

[project.urls]
Homepage = "https://github.com/schwinger42/Epitaxy"
Issues = "https://github.com/schwinger42/Epitaxy/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/epitaxy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
filterwarnings = [
    "error",
    # mcp / starlette emit a few harmless DeprecationWarnings on Py3.13; keep noise low
    "ignore::DeprecationWarning:websockets.*",
    "ignore::DeprecationWarning:starlette.*",
]

[tool.coverage.run]
source = ["src/epitaxy"]
branch = true
omit = [
    "src/epitaxy/__init__.py",  # only re-exports version
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
